--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bloomer": "^0.6.3",
     "bulma": "^0.7.1",
     "immutability-helper": "^2.8.1",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-big-scheduler": "^0.2.1",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
