--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-big-scheduler": "^0.2.1",
+    "react-datepicker": "^1.6.0",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
