--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-table": "^6.8.6",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
