--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bloomer": "^0.6.3",
+    "bootstrap": "^4.1.3",
     "bulma": "^0.7.1",
     "immutability-helper": "^2.8.1",
     "moment": "^2.22.2",
@@ -20,6 +21,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-table": "^6.8.6",
+    "reactstrap": "^6.5.0",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
